# cognitive-State-Diary-generator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: build-executor.md  code-reviewer.md  cross-reviewer.md  dependency-checker.md  file-finder.md  impact-analyzer.md  log-analyzer.md  security-checker.md  test-analyzer.md  test-runner.md
.claude/commands/: add-feature.md  add-scenario.md  bootstrap.md  cross-review.md  fix-bug.md  refactor.md  reimagine.md  review.md  run-tests.md  setup-agents.md  setup-claude-md.md  setup-commands.md  setup-docs.md  setup-hooks.md  setup-skills.md  smart-compact.md  tune-prompt.md  update-docs.md  (+1 more)
.codex/: budget.json  config.toml
.steering/: README.md  _setup-progress.md  _verify-report-20260507.md  _verify-report-20260508.md
csdg/: config.py  main.py  scenario.py  schemas.py
docs/: agent-shared.md  architecture.md  development-guidelines.md  erre-design.md  external-skills.md  functional-design.md  glossary.md  mvp-implementation-workflow.md  repository-structure.md
prompts/: Prompt_Critic.md  Prompt_Generator.md  Prompt_MemoryExtract.md  Prompt_StateUpdate.md  System_MemoryManager.md  System_Persona.md
scripts/: run-codex-consult.sh  run-codex-review.sh  secrets-filter.sh  throughput_report.py  verify_critic_discrimination.py
tests/: conftest.py  test_actor.py  test_config.py  test_critic.py  test_llm_cache.py  test_main.py  test_memory.py  test_pipeline.py  test_scenario.py  test_schemas.py  test_state_transition.py  test_throughput_report.py
(+124 files in other folders)
