[project]
name = "csdg"
version = "0.1.0"
description = "Cognitive-State Diary Generator — AI character diary generation system based on systematic cognitive models"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.0,<3",
    "anthropic>=0.80.0,<1",
    "google-genai>=1.0,<2",
    "matplotlib>=3.9,<4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "pydantic_settings"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that require LLM API access",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]
